<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/input_minimum_number"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_min"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/min"
        android:inputType="number"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/input_maximum_number"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_max"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/et_min"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/max"
        android:inputType="number"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:text="@string/hasil"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/b_generate"
        android:layout_marginTop="80dp"
        android:text=""
        android:textSize="36sp" />

    <Button
        android:id="@+id/b_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_max"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/generate" />
</RelativeLayout>